--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-table": "^7.8.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-table": "^7.7.19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
